[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=1]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=2]
[ext_resource path="res://src/main/ui/level-select/scrolling-level-buttons.gd" type="Script" id=3]
[ext_resource path="res://src/main/ui/level-select/level-info-panel.gd" type="Script" id=4]
[ext_resource path="res://src/main/ui/level-select/level-description-panel.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/level-select/level-select.gd" type="Script" id=6]
[ext_resource path="res://src/main/ui/swipe-container.gd" type="Script" id=7]
[ext_resource path="res://src/main/ui/level-select/level-grade-labels.gd" type="Script" id=8]
[ext_resource path="res://src/main/ui/level-select/LevelSelectButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/level-select/HookableLevelGradeLabel.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/main/ui/level-select/WorldSelectButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/ui/ImageButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/main/ui/level-select/cutscene-yes.png" type="Texture" id=13]
[ext_resource path="res://assets/main/ui/level-select/cutscene-yes-pressed.png" type="Texture" id=14]
[ext_resource path="res://src/main/ui/level-select/level-select-panel-top.gd" type="Script" id=15]
[ext_resource path="res://src/main/ui/cutscene-button.gd" type="Script" id=16]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.1, 0.094, 0.094, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="LevelSelect" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
level_buttons_path = NodePath("VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( -10, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Control" parent="VBoxContainer"]
margin_right = 904.0
margin_bottom = 376.0
size_flags_vertical = 3
script = ExtResource( 15 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
follow_focus = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Top/ScrollContainer"]
margin_right = 904.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 256
custom_constants/margin_top = 150
custom_constants/margin_left = 256
custom_constants/margin_bottom = 150

[node name="LevelButtons" type="HBoxContainer" parent="VBoxContainer/Top/ScrollContainer/MarginContainer"]
margin_left = 256.0
margin_top = 150.0
margin_right = 648.0
margin_bottom = 226.0
custom_constants/separation = 5
script = ExtResource( 3 )
LevelSelectButtonScene = ExtResource( 9 )
WorldSelectButtonScene = ExtResource( 11 )

[node name="GradeLabels" type="Control" parent="VBoxContainer/Top/ScrollContainer/MarginContainer"]
margin_left = 256.0
margin_top = 150.0
margin_right = 648.0
margin_bottom = 226.0
mouse_filter = 2
script = ExtResource( 8 )
GradeLabelScene = ExtResource( 10 )

[node name="CutsceneButton" parent="VBoxContainer/Top" instance=ExtResource( 12 )]
modulate = Color( 1, 1, 1, 0.627451 )
self_modulate = Color( 1, 1, 1, 0.376471 )
anchor_top = 1.0
anchor_right = 0.0
margin_left = 4.0
margin_top = -112.0
margin_right = 100.0
margin_bottom = -16.0
rect_min_size = Vector2( 96, 96 )
icon = ExtResource( 13 )
expand_icon = true
script = ExtResource( 16 )
normal_icon = ExtResource( 13 )
pressed_icon = ExtResource( 14 )
level_buttons_path = NodePath("../ScrollContainer/MarginContainer/LevelButtons")

[node name="Bottom" type="Control" parent="VBoxContainer"]
margin_top = 380.0
margin_right = 904.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Panel" parent="VBoxContainer/Bottom/HBoxContainer"]
margin_right = 450.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom/HBoxContainer/Description"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Bottom/HBoxContainer/Description/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Panel" parent="VBoxContainer/Bottom/HBoxContainer"]
margin_left = 454.0
margin_right = 904.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Bottom/HBoxContainer/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Bottom/HBoxContainer/Info/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_added" from="VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Top/ScrollContainer/MarginContainer/GradeLabels" method="_on_LevelButtons_button_added"]
[connection signal="locked_level_selected" from="VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Description" method="_on_LevelButtons_locked_level_selected"]
[connection signal="locked_level_selected" from="VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Info" method="_on_LevelButtons_locked_level_selected"]
[connection signal="overall_selected" from="VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Description" method="_on_LevelButtons_overall_selected"]
[connection signal="overall_selected" from="VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Info" method="_on_LevelButtons_overall_selected"]
[connection signal="unlocked_level_selected" from="VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Description" method="_on_LevelButtons_unlocked_level_selected"]
[connection signal="unlocked_level_selected" from="VBoxContainer/Top/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Bottom/HBoxContainer/Info" method="_on_LevelButtons_unlocked_level_selected"]
